# cofre_spectrum

./: .gitignore  README.md  cofre.py  example.py  fnirs_example.py  publish.bat  pyproject.toml
src/cofre_spectrum/: __init__.py  core.py
